<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="624dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageunp"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/imageunp_description"
            android:src="@drawable/imageunp" />

        <TextView
            android:id="@+id/inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/inicio_de_sesion"
            android:gravity="center"
            android:text="@string/inicio_de_sesion"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/ingreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/ingreso"
            android:gravity="center"
            android:text="@string/ingresa_tu_usuario_y_contrase_a_para_ingresar"
            android:textSize="15sp"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:layout_width="372dp"
            android:layout_height="68dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="40dp">

            <ImageView
                android:id="@+id/imal"
                android:layout_width="40dp"
                android:layout_height="51dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/imal_description"
                android:src="@drawable/imal" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="298dp"
                android:layout_height="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="289dp"
                    android:layout_height="50dp"
                    android:hint="@string/usuario"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="372dp"
            android:layout_height="71dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/eyes2"
                android:layout_width="40dp"
                android:layout_height="52dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/eyes2_description"
                android:src="@drawable/eyes2" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="302dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="289dp"
                    android:layout_height="50dp"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/reunded_button"
            android:text="@string/iniciar_sesion"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="369dp"
            android:layout_height="21dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/olvidastes_tu_contrase_a"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/registrarse_aqui"
                android:text="@string/entra_aqui"
                android:textColor="@color/celeste"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
