<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/encabezado_asis"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/revision_de_asistencia"
            android:layout_gravity="center"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textColor="@color/blue"/>

        <TextView
            android:id="@+id/asignatura"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/asignatura"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fecha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Fecha"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/aula"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Aula"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/total_mujeres"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/mujeres"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/total_varones"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/varones"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/blue" />
        <TextView
            android:id="@+id/totales"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/total"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/blue" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
