<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterActivity">

   <!-- Encabezado -->
   <TextView
       android:id="@+id/encabezado"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="Toma de Asistencia"
       android:textSize="30sp"
       android:textStyle="bold"
       android:gravity="center"
       android:textColor="#0C22A8"
       android:layout_marginTop="70dp"
       android:layout_marginEnd="20dp"
       android:paddingBottom="20dp"
       tools:ignore="HardcodedText" />

   <!-- Campo de Asistencia -->
   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/editTextAsistencia"
          android:layout_width="362dp"
          android:layout_height="60dp"
          android:layout_marginTop="40dp"
          android:hint="@string/asistencia"
          android:inputType="text"
          android:textSize="20sp"
          android:textStyle="bold" />
   </com.google.android.material.textfield.TextInputLayout>

   <!-- Campo de Fecha -->
   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/editTextFecha"
          android:layout_width="362dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:hint="@string/fecha"
          android:inputType="date"
          android:textSize="20sp"
          android:textStyle="bold" />
   </com.google.android.material.textfield.TextInputLayout>

   <!-- Campo de Hora -->
   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/editTextHora"
          android:layout_width="360dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:hint="@string/hora"
          android:inputType="time"
          android:textSize="20sp"
          android:textStyle="bold" />
   </com.google.android.material.textfield.TextInputLayout>

   <!-- Campo de Aula -->
   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/editTextAula"
          android:layout_width="358dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="30dp"
          android:hint="@string/aula"
          android:inputType="text"
          android:textSize="20sp"
          android:textStyle="bold" />
   </com.google.android.material.textfield.TextInputLayout>

   <!-- Button Enviar -->
   <Button
       android:id="@+id/buttonEnviar"
       android:layout_width="188dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="90dp"
       android:layout_marginTop="40dp"
       android:layout_marginEnd="90dp"
       android:background="@drawable/reunded_button"
       android:text="@string/enviar"
       android:textSize="18sp" />
</LinearLayout>
